[project]
name = "auth-gran"
version = "0.1.0"
description = "JWT Authentication API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "sqlalchemy",
    "pydantic",
    "pytest",
    "pydantic-settings>=2.8.1",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.20",
    "structlog>=25.2.0",
    "granian>=2.2.1",
    "asgiref>=3.8.1",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
